# random-image-api

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Insomnia-catsnap-api  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: routes.py
app/config/: settings.py
app/middleware/: cors.py  error_handler.py  logger.py
app/schemas/: response.py
app/services/v1/: cat_service.py
frontend/: app.py  requirements.txt
frontend/components/: api_caller.py
frontend/config/: settings.py
